# harnex

./: .env.docker  .env.example  .env.prod.example  .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  TODOS.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_connector.yml
.github/workflows/: ci.yml  deploy.yml
harnex-ui/: Harnex.html
harnex-ui/components/: console-connections.jsx  console-pages.jsx  icons.jsx  marketing.jsx
harnex-ui/harness_onboarding/: Onboarding.html
harnex-ui/harness_onboarding/components/: onboarding-canvas.jsx  onboarding.jsx
harnex-ui/harness_onboarding/styles/: onboarding.css
harnex-ui/harness_onboarding/uploads/harnex (Remix)/: Harnex.html
harnex-ui/styles/: tokens.css
infra/caddy/: Caddyfile
infra/keycloak/: post-import.sh
infra/keycloak/import/: harnex-realm.json
scripts/: azure_provision.sh  blaxel_provision.py  check_no_inline_vault_paths.sh  cleanup_web_sessions.py  deploy.sh  infisical_smoke.py  keycloak_setup.py  vm_bootstrap.sh
src/harnex_api/: config.py  logging.py  main.py
src/harnex_api/api/dependencies/: auth.py  db.py  rate_limit.py
src/harnex_api/api/middleware/: csrf.py
src/harnex_api/api/routes/: api_keys.py  artifacts.py  auth.py  connections.py  connectors.py  execute.py  executions.py  files.py  me.py  search.py  session.py  tenants.py  usage.py
src/harnex_api/api/schemas/: api_keys.py  auth.py  common.py  connections.py  connectors.py  execute.py  executions.py  files.py  search.py  session.py  tenants.py  usage.py
src/harnex_api/auth/: strategies.py  vault.py
src/harnex_api/connectors/: base.py  generic.py  github.py  gitlab.py  jenkins.py  jira.py  kubernetes.py  linear.py  registry.py  seed.py  slack.py  stripe.py
src/harnex_api/db/: __init__.py  models.py  session.py
src/harnex_api/db/migrations/: env.py
src/harnex_api/mcp/: server.py
src/harnex_api/services/: api_key_auth.py  api_keys.py  connection_test.py  connections.py  keycloak_admin.py  ssrf.py  web_session.py
src/harnex_api/services/execute/: __init__.py  operation.py  runner.py  sandbox.py  skill_runner.py
src/harnex_api/services/ingestion/: chunker.py  enricher.py  fetcher.py  pipeline.py
src/harnex_api/services/object_storage/: __init__.py  azure_blob.py  base.py  local_fs.py  provider.py
src/harnex_api/services/search/: embeddings.py  service.py  vector_search.py
src/harnex_api/services/skills/: __init__.py  registry.py
src/harnex_api/services/tenant/: create.py  seed.py
tests/: conftest.py
tests/integration/: test_connectors_route.py  test_indexing_and_search.py  test_infisical_vault.py  test_integrity_error_handler.py  test_mcp_smoke.py
tests/unit/: test_api_key_scope.py  test_api_keys.py  test_auth_strategies.py  test_chunker.py  test_connection_test.py  test_connector_registry.py  test_csrf_middleware.py  test_embeddings_fake.py  test_enricher.py  test_execute_code.py  test_execution_header_sanitize.py  test_fetcher.py  test_mcp_server.py  test_operation_builder.py  test_rate_limit.py  test_reindex_connection.py  test_sandbox_runner.py  test_tenant_owner_subject.py  test_tenant_slugify.py  test_usage_monthly_bump.py  test_vault_path_isolation.py
tests/unit/api/: test_session_cookies.py
tests/unit/connectors/: conftest.py  test_connector_contract.py  test_github_connector.py  test_jira_connector.py  test_kubernetes_connector.py  test_linear_connector.py  test_slack_connector.py  test_stripe_connector.py
tests/unit/services/: test_web_session.py
web/: .dockerignore  .env.development  .env.example  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/.tanstack/tmp/: 052ec119-c9da731852c96519f463ab1a1ffae1d7  052ec119-d2300bec0ab74a3b476d7491d94cd33f
web/src/: main.tsx
web/src/components/: HarnexLogo.tsx  McpInstallSnippets.tsx  icons.tsx
web/src/lib/: api.ts  auth.tsx  env.ts  theme.ts  useApi.ts
web/src/routes/: __root.tsx  _app.tsx  home.tsx  index.tsx  login.tsx  onboarding.tsx  signed-out.tsx  skills.tsx
web/src/styles/: globals.css  onboarding.css  signed-out.css
(+74 files in other folders)
