[project]
name = "harnex-api"
version = "0.1.0"
description = "Harnex backend — multitenant API connector and orchestration platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "openapi-spec-validator>=0.7",
    "python-multipart>=0.0.20",
    "jsonschema>=4.23",
    "prance>=23.6.21.0",
    "pyyaml>=6.0",
    "openai>=1.54",
    "pgvector>=0.3.6",
    "mcp>=1.27",
    "blaxel>=0.2",
    "tenacity>=9.0",
    "structlog>=24.4",
    "orjson>=3.10",
    "redis[hiredis]>=5.2",
    "azure-storage-blob>=12.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "anyio>=4.6",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harnex_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Vendored authoring guides + helper scripts (composio MIT, surfaced verbatim
# to LLM callers and shipped into the Blaxel sandbox at execute time). They're
# not part of our codebase and aren't linted by us.
extend-exclude = ["src/harnex_api/skills/builtins"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
# B008 fires on FastAPI's `= Depends(...)` default-arg convention; that's the
# documented usage so we ignore the rule project-wide rather than littering noqa.
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["harnex_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: opt-in tests that require running infrastructure (Postgres, Infisical, etc.)",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Vendored skill assets under src/harnex_api/skills/builtins are loaded as TEXT
# by the registry and shipped into the Blaxel sandbox for execution. They are
# not imported by the API and are intentionally exempt from our strict mypy
# config.
exclude = "src/harnex_api/skills/builtins/.*"

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true
